objects/AIA_Plan_Network__c.object
<CustomObject>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InNetwork__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>InNetwork Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_ID__c</fullName>
        <description>network id coming from PCS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Network ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_OutNetwork__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OutNetwork Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>AIA_Plan__c</referenceTo>
        <relationshipLabel>Plan Network</relationshipLabel>
        <relationshipName>Plan_Network</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BRF</fullName>
                </value>
                <value>
                    <fullName>BDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>AIA Object - Networks associated with a plan</description>
    <label>Plan Network</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Network Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Network</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>